Fix: line breaking logo text on small screens

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -35,6 +35,13 @@ header, main, footer {
   }
 }
 
+@media only screen and (max-width : 720px) {
+  nav .brand-logo {
+    width: fit-content;
+    font-size: 1.5rem;
+  }
+}
+
 nav {
   background-color: $GREENS_GREEN_LIGHT;
   height: 56px;
